# CMakeTemplates

./: CMakeLists.txt  readme.md
Example/: CMakeLists.txt  build.sh
Example/Exec/: CMakeLists.txt
Example/Exec/src/: main.c
Example/Lib/: CMakeLists.txt
Example/Lib/include/: lib.h
Example/Lib/src/: lib.c
